--- a/style.css
+++ b/style.css
@@ -12,31 +12,31 @@ body {
   }
   
   .w {
-     background-image: url("/DOM/Drum/Drum images/tom1.png");
+     background-image: url("/Drum/Drum images/tom1.png");
   }
   
   .a {
-    background-image: url("/DOM/Drum/Drum images/tom2.png");
+    background-image: url("/Drum/Drum images/tom2.png");
   }
   
   .s {
-    background-image: url("/DOM/Drum/Drum images/tom3.png");
+    background-image: url("/Drum/Drum images/tom3.png");
   }
   
   .d {
-    background-image: url("/DOM/Drum/Drum images/tom4.png");
+    background-image: url("/Drum/Drum images/tom4.png");
   }
   
   .j {
-    background-image: url("/DOM/Drum/Drum images/snare.png");  
+    background-image: url("/Drum/Drum images/snare.png");  
   }
   
   .k {
-    background-image: url("/DOM/Drum/Drum images/crash.png");
+    background-image: url("/Drum/Drum images/crash.png");
   }
   
   .l {
-    background-image: url("/DOM/Drum/Drum images/kick.png");
+    background-image: url("/Drum/Drum images/kick.png");
   }
   
   .set {
