--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@ body {
   }
   
   .w {
-     background-image: url("/Drum images/tom1.png");
+     background-image: url("/Drum/Drum images/tom1.png");
   }
   
   .a {
-    background-image: url("/Drum images/tom2.png");
+    background-image: url("Drum images/tom2.png");
   }
   
   .s {
