--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
   }
   
   .k {
-    background-image: url("/Drum images/crash.png");
+    background-image: url("Drum-Kit/Drum images/crash.png");
   }
   
   .l {
