--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   }
   
   .w {
-     background-image: url("/Drum/Drum images/tom1.png");
+     background-image: url("/Drum images/tom1.png");
   }
   
   .a {
@@ -20,7 +20,7 @@ body {
   }
   
   .s {
-    background-image: url("/Drum images/tom3.png");
+    background-image: url("Drum images/tom3.png");
   }
   
   .d {
@@ -28,15 +28,15 @@ body {
   }
   
   .j {
-    background-image: url("/Drum images/snare.png");  
+    background-image: url("Drum images/snare.png");  
   }
   
   .k {
-    background-image: url("Drum-Kit/Drum images/crash.png");
+    background-image: url("Drum images/crash.png");
   }
   
   .l {
-    background-image: url("/Drum images/kick.png");
+    background-image: url("Drum images/kick.png");
   }
   
   .set {
