--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   }
   
   .w {
-     background-image: url("Drum images/tom2.png");
+     background-image: url("Drum images/tom1.png");
   }
   
   .a {
@@ -20,23 +20,23 @@ body {
   }
   
   .s {
-    background-image: url("Drum images/tom2.png");
+    background-image: url("Drum images/tom3.png");
   }
   
   .d {
-    background-image: url("Drum images/tom2.png");
+    background-image: url("Drum images/tom4.png");
   }
   
   .j {
-    background-image: url("Drum images/tom2.png");  
+    background-image: url("Drum images/snare.png");  
   }
   
   .k {
-    background-image: url("Drum images/tom2.png");
+    background-image: url("Drum images/crash.png");
   }
   
   .l {
-    background-image: url("Drum images/tom2.png");
+    background-image: url("Drum images/kick.png");
   }
   
   .set {
